[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ncaadb"
version = "0.1.0"
description = ""
authors = ["Hans Missenheim <hansmissenheim@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.29.0"
ruff = "^0.1.13"
mypy = "^1.8.0"
pandas-stubs = "^2.1.4.231227"
pytest = "^7.4.4"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
# Ruff linting rules that should be exluded for tests
"tests/**/*.py" = ["D", "S101"]
